--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,99 @@
+@font-face
+{
+  font-family: "Market Deco";
+  src: url(Market_Deco.ttf);
+}
+
+/*****************************************************************************/
+/*
+/* Visualization
+/*
+/*****************************************************************************/
+.node circle {
+    cursor: pointer;
+    fill: #fff;
+    stroke: steelblue;
+    stroke-width: 1.5px;
+  }
+
+.node text {
+    font-size: 12px;
+  }
+
+path.link {
+    fill: none;
+    stroke: #ccc;
+    stroke-width: 1.5px;
+  }
+
+/*****************************************************************************/
+/*
+/* Bootstrap
+/*
+/*****************************************************************************/
+.jumbotron {
+  background-color: #222222;
+  background-image: url(/assets/Banner.png);
+  border-color: #080808;
+  color: white;
+  margin-bottom: -2%;
+}
+
+#top-jumbotron {
+  margin-left: -7.89%;
+}
+
+.navbar {
+  background-color: #494949;
+  border-color: #494949;
+}
+
+.navbar-collapse {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
+.navbar-brand {
+  padding-left: 116px;
+}
+
+.navbar-right {
+  padding-right: 116px;
+}
+
+.stuck {
+  position: fixed;
+  top: 0px;
+}
+
+.search {
+  width: 60%;
+}
+
+form #search-query {
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+  transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+}
+
+.btn-custom {
+  background-color: hsl(0, 0%, 28%) !important;
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#6b6b6b", endColorstr="#474747");
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#6b6b6b), to(#474747));
+  background-image: -moz-linear-gradient(top, #6b6b6b, #474747);
+  background-image: -ms-linear-gradient(top, #6b6b6b, #474747);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #6b6b6b), color-stop(100%, #474747));
+  background-image: -webkit-linear-gradient(top, #6b6b6b, #474747);
+  background-image: -o-linear-gradient(top, #6b6b6b, #474747);
+  background-image: linear-gradient(#6b6b6b, #474747);
+  border-color: #474747 #474747 hsl(0, 0%, 24.5%);
+  color: #fff !important;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.23);
+  -webkit-font-smoothing: antialiased;
+}
+
 /*****************************************************************************/
 /*
 /* Common
@@ -13,21 +109,18 @@
 html, body { height: 100%; }
 
 body {
-  background-color: #FFF;
   font: 13.34px Helvetica, Arial, sans-serif;
   font-size: small;
-  text-align: center;
 }
 
 h1, h2, h3, h4, h5, h6 {
   font-size: 100%; }
 
-h1 { margin-bottom: 1em; }
 p { margin: 1em 0; }
 
-a         { color: #00a; }
-a:hover   { color: #000; }
-a:visited { color: #a0a; }
+a         { color: #0000cd; }
+a:hover   { color: #0000cd; }
+a:visited { color: #0000cd; }
 
 /*****************************************************************************/
 /*
@@ -49,6 +142,11 @@ a:visited { color: #a0a; }
   font-size: 80%;
 }
 
+#logo-top-left {
+  margin-left: 15%;
+  margin-top: 20%;
+}
+
 /*****************************************************************************/
 /*
 /* Site
@@ -61,6 +159,15 @@ a:visited { color: #a0a; }
   width: 42em;
   margin: 3em auto 2em;
   line-height: 1.5em;
+  padding-bottom: 70px;
+}
+
+.site-name {
+  font-family: "Market Deco", sans-serif;
+}
+
+.site-branding {
+  padding-left: 4px;
 }
 
 .header a {
@@ -95,30 +202,15 @@ a:visited { color: #a0a; }
 }
 
 .footer {
+  background-color: white;
   font-size: 80%;
   color: #666;
   border-top: 4px solid #eee;
   margin-top: 2em;
   overflow: hidden;
-}
-
-.footer .contact {
-  float: left;
-  margin-right: 3em;
-}
-
-.footer .contact a {
-  color: #8085C1;
-}
-
-.footer .rss {
-  margin-top: 1.1em;
-  margin-right: -.2em;
-  float: right;
-}
-
-.footer .rss img {
-  border: 0;
+  position: fixed;
+  margin-left: 83.94px;
+  bottom: 0px;
 }
 
 /*****************************************************************************/
